add source test and message helper test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -91,6 +91,31 @@
             "MIMode": "gdb",
         },
         {
+            "name": "source_test",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/source/source_test",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "3427.5",
+                "-g",
+                "50",
+                "-t",
+                "uhd",
+                "-d",
+                "type=b200",
+                "-c",
+                "1"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+        },
+        {
             "name": "pcap_writer",
             "type": "cppdbg",
             "request": "launch",
