Fix ssb search for 184.32MHz sample rate

--- a/configs/config-srsran-n78-20MHz.conf
+++ b/configs/config-srsran-n78-20MHz.conf
@@ -3,6 +3,7 @@ band = 78       # Band number
 nof_prb = 51    # Number of Physical Resource Blocks
 scs_common = 30 # Subcarrier Spacing for common (kHz)
 scs_ssb = 30    # Subcarrier Spacing for SSB (kHz)
+ssb_period_ms = 10 # SSB periodicity in milliseconds
 
 [rf]
 freq_offset = 0       # Frequency offset (Hz)
