Add SDR timing test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -227,6 +227,35 @@
             "MIMode": "gdb",
         },
         {
+            "name": "ssb_test_fdd",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/comp/ssb/ssb_test",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "1843.2",
+                "-b",
+                "1836.15",
+                "-I",
+                "1",
+                "-B",
+                "3",
+                "-S",
+                "15",
+                "-r",
+                "10000",
+                "-F",
+                "${workspaceFolder}/shadower/test/data/srsran-n3-20MHz/ssb.fc32",
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+        },
+        {
             "name": "fft_test",
             "type": "cppdbg",
             "request": "launch",
