--- a/shadower/comp/workers/CMakeLists.txt
+++ b/shadower/comp/workers/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(broadcast_worker broadcast_worker.cc broadcast_worker.h)
 target_link_libraries(broadcast_worker utils srsran_mac)
-if(USE_CUDA)
+if(ENABLE_CUDA)
     target_link_libraries(broadcast_worker fft_processor)
-endif(USE_CUDA)
+endif(ENABLE_CUDA)
 
 add_executable(broadcast_worker_sib1_test tests/broadcast_worker_sib1_test.cc)
 target_link_libraries(broadcast_worker_sib1_test broadcast_worker utils)
@@ -46,9 +46,9 @@ target_link_libraries(wd_worker_test wd_worker utils)
 add_library(ue_dl_worker ue_dl_worker.cc)
 target_link_libraries(ue_dl_worker utils srsran_mac wd_worker)
 target_include_directories(ue_dl_worker PUBLIC ${WDISSECTOR_PATH}/src ${WDISSECTOR_INCLUDES})
-if(USE_CUDA)
+if(ENABLE_CUDA)
     target_link_libraries(ue_dl_worker fft_processor)
-endif(USE_CUDA)
+endif(ENABLE_CUDA)
 
 add_executable(ue_dl_worker_test tests/ue_dl_worker_test.cc)
 target_link_libraries(ue_dl_worker_test ue_dl_worker utils)
@@ -65,9 +65,9 @@ set_tests_properties(shd_ue_dl_worker_test_20MHz PROPERTIES WORKING_DIRECTORY ${
 add_library(gnb_ul_worker gnb_ul_worker.cc)
 target_link_libraries(gnb_ul_worker utils srsran_mac wd_worker)
 target_include_directories(gnb_ul_worker PUBLIC ${WDISSECTOR_PATH}/src ${WDISSECTOR_INCLUDES})
-if(USE_CUDA)
+if(ENABLE_CUDA)
     target_link_libraries(gnb_ul_worker fft_processor)
-endif(USE_CUDA)
+endif(ENABLE_CUDA)
 
 add_executable(gnb_ul_worker_test tests/gnb_ul_worker_test.cc)
 target_link_libraries(gnb_ul_worker_test gnb_ul_worker ue_dl_worker utils)
