--- a/shadower/test/CMakeLists.txt
+++ b/shadower/test/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_executable(cell_search_test cell_search_test.cc)
 target_link_libraries(cell_search_test utils)
-if(USE_CUDA)
+if(ENABLE_CUDA)
   target_link_libraries(cell_search_test ssb_cuda)
-endif(USE_CUDA)
+endif(ENABLE_CUDA)
 add_test(shd_cell_search_test_srsran_n78_20MHz ${CMAKE_BINARY_DIR}/shadower/test/cell_search_test 0)
 set_tests_properties(shd_cell_search_test_srsran_n78_20MHz PROPERTIES WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
 add_test(shd_cell_search_test_srsran_n78_40MHz ${CMAKE_BINARY_DIR}/shadower/test/cell_search_test 1)
@@ -10,9 +10,9 @@ set_tests_properties(shd_cell_search_test_srsran_n78_40MHz PROPERTIES WORKING_DI
 
 add_executable(sib_search_test sib_search_test.cc)
 target_link_libraries(sib_search_test utils)
-if(USE_CUDA)
+if(ENABLE_CUDA)
   target_link_libraries(sib_search_test fft_processor)
-endif(USE_CUDA)
+endif(ENABLE_CUDA)
 add_test(shd_sib_search_test_srsran_n78_20MHz ${CMAKE_BINARY_DIR}/shadower/test/sib_search_test 0)
 set_tests_properties(shd_sib_search_test_srsran_n78_20MHz PROPERTIES WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
 add_test(shd_sib_search_test_srsran_n78_40MHz ${CMAKE_BINARY_DIR}/shadower/test/sib_search_test 1)
