--- a/shadower/comp/sync/CMakeLists.txt
+++ b/shadower/comp/sync/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(syncer syncer.cc syncer.h)
 target_link_libraries(syncer srsran_phy srsran_common utils)
-if (USE_CUDA)
+if (ENABLE_CUDA)
     target_link_libraries(syncer ssb_cuda)
-endif(USE_CUDA)
+endif(ENABLE_CUDA)
 
 add_executable(syncer_test tests/syncer_test.cc)
 target_link_libraries(syncer_test syncer source)
