--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -188,7 +188,8 @@
                 "-C",
                 "30",
                 "-p",
-                "20"            ],
+                "20"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
@@ -508,6 +509,31 @@
                 "3",
                 "-P",
                 "24"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "preLaunchTask": "build_all"
+        },
+        {
+            "name": "pdsch_decode_search",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/test/pdsch_decode_search",
+            "args": [
+                "0",
+                "-f",
+                "shadower/test/data/srsran-n78-20MHz/pdsch_3440.fc32",
+                "-s",
+                "3440",
+                "-h",
+                "0",
+                "-b",
+                "-100",
+                "-e",
+                "100"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
