Fix the cyclic prefix issue in fft processor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "preLaunchTask": "build_active"
+            "preLaunchTask": "build_all"
         },
         {
             "name": "recorder",
