Updated the gnb_dl_worker to prevent jamming and uplink grant in FDD

--- a/configs/config-srsran-n3-20MHz.conf
+++ b/configs/config-srsran-n3-20MHz.conf
@@ -7,7 +7,7 @@ ssb_period_ms = 10 # SSB periodicity in milliseconds
 
 [rf]
 freq_offset = 0       # Frequency offset (Hz)
-tx_gain = 80          # Transmit gain (dB)
+tx_gain = 85          # Transmit gain (dB)
 rx_gain = 40          # Receive gain (dB)
 dl_arfcn = 368500     # Downlink ARFCN
 ssb_arfcn = 366970    # SSB ARFCN
@@ -27,22 +27,22 @@ num_ues = 12          # Number of UETrackers to pre-initialize
 enable_gpu = false
 
 [injector]
-delay_n_slots = 6     # Number of slots to delay injecting the message
-duplications = 4      # Number of duplications to send in each inject
+delay_n_slots = 3     # Number of slots to delay injecting the message
+duplications = 50      # Number of duplications to send in each inject
 tx_cfo_correction = 0 # Uplink CFO correction (Hz)
-tx_advancement = 166  # Number of samples to send in advance
-pdsch_mcs = 3         # PDSCH MCS
-pdsch_prbs = 24       # PDSCH PRBs
-
-# [source]
-# source_type = uhd                               # Source type: file, limesdr, uhd
-# source_module = build/shadower/libuhd_source.so # Source module path
-# source_params = type=b200,serial=3218CC4        # Device arguments for SDR source
+tx_advancement = 172  # Number of samples to send in advance
+pdsch_mcs = 2         # PDSCH MCS
+pdsch_prbs = 12       # PDSCH PRBs 
 
 [source]
-source_type = file                               # Source type: file, limesdr, uhd
-source_module = build/shadower/libfile_source.so # Source module path
-source_params = /root/records/band3/samsung_ch_0.fc32,/root/records/band3/samsung_ch_1.fc32     # Device arguments for SDR source
+source_type = uhd                               # Source type: file, limesdr, uhd
+source_module = build/shadower/libuhd_source.so # Source module path
+source_params = type=b200,serial=3218CC4        # Device arguments for SDR source
+
+# [source]
+# source_type = file                               # Source type: file, limesdr, uhd
+# source_module = build/shadower/libfile_source.so # Source module path
+# source_params = /root/records/band3/samsung_ch_0.fc32,/root/records/band3/samsung_ch_1.fc32     # Device arguments for SDR source
 
 # [source]
 # source_type = uhd                                   # Source type: file, limesdr, uhd
@@ -54,7 +54,7 @@ enable_recorder = false
 
 [log]
 log_level = INFO # General log level
-syncer = INFO    # Syncer log level
+syncer = DEBUG    # Syncer log level
 worker = INFO    # Worker log level
 bc_worker = INFO # Broadcast worker log level
 
@@ -62,7 +62,8 @@ bc_worker = INFO # Broadcast worker log level
 pcap_folder = logs/ # Pcap folder
 
 [exploit]
-module = build/modules/lib_dummy_exploit.so
+# module = build/modules/lib_dummy_exploit.so
+module = build/modules/lib_rrc_setup_fdd_test.so
 # module = build/modules/lib_identity_request.so
 # module = build/modules/lib_dg_authentication_request_sniffer.so
 # module = build/modules/lib_dg_authentication_replay.so
