Fix the decoding issue for different subcarrier spacing

--- a/configs/config-srsran-n3-20MHz.conf
+++ b/configs/config-srsran-n3-20MHz.conf
@@ -54,7 +54,7 @@ enable_recorder = false
 
 [log]
 log_level = INFO # General log level
-syncer = DEBUG    # Syncer log level
+syncer = INFO    # Syncer log level
 worker = INFO    # Worker log level
 bc_worker = INFO # Broadcast worker log level
 
@@ -62,8 +62,8 @@ bc_worker = INFO # Broadcast worker log level
 pcap_folder = logs/ # Pcap folder
 
 [exploit]
-# module = build/modules/lib_dummy_exploit.so
-module = build/modules/lib_rrc_setup_fdd_test.so
+module = build/modules/lib_dummy_exploit.so
+# module = build/modules/lib_rrc_setup_fdd_test.so
 # module = build/modules/lib_identity_request.so
 # module = build/modules/lib_dg_authentication_request_sniffer.so
 # module = build/modules/lib_dg_authentication_replay.so
