--- a/configs/config-srsran-n3-20MHz.conf
+++ b/configs/config-srsran-n3-20MHz.conf
@@ -7,10 +7,12 @@ ssb_period_ms = 10 # SSB periodicity in milliseconds
 
 [rf]
 freq_offset = 0       # Frequency offset (Hz)
-tx_gain = 85          # Transmit gain (dB)
-rx_gain = 40          # Receive gain (dB)
-dl_arfcn = 368500     # Downlink ARFCN
-ssb_arfcn = 366970    # SSB ARFCN
+tx_gain = 31          # Transmit gain (dB)
+rx_gain = 31          # Receive gain (dB)
+#dl_arfcn = 368500     # Downlink ARFCN
+dl_arfcn = 373000     # Downlink ARFCN
+#ssb_arfcn = 366970    # SSB ARFCN
+ssb_arfcn = 371530    # SSB ARFCN
 sample_rate = 23.04e6 # Sample rate (Hz)
 num_channels = 2      # Number of channels
 uplink_cfo = -0.00054 # Uplink CFO (Hz) correction
