Add test to test decoding of the over-the-air injected packets

--- a/shadower/test/CMakeLists.txt
+++ b/shadower/test/CMakeLists.txt
@@ -118,3 +118,6 @@ target_link_libraries(ssb_frequency_search utils source)
 
 add_executable(sdr_timing_test hardware/sdr_timing_test.cc)
 target_link_libraries(sdr_timing_test utils source syncer)
+
+add_executable(sdr_txrx_decode_test hardware/sdr_txrx_decode_test.cc)
+target_link_libraries(sdr_txrx_decode_test utils source syncer wd_worker)
