--- a/configs/config-srsran-n3-20MHz.conf
+++ b/configs/config-srsran-n3-20MHz.conf
@@ -1,55 +1,50 @@
 [cell]
-band = 3       # Band number
-nof_prb = 106    # Number of Physical Resource Blocks
+band = 3 # Band number
+nof_prb = 106 # Number of Physical Resource Blocks
 scs_common = 15 # Subcarrier Spacing for common (kHz)
-scs_ssb = 15    # Subcarrier Spacing for SSB (kHz)
+scs_ssb = 15 # Subcarrier Spacing for SSB (kHz)
 ssb_period_ms = 10 # SSB periodicity in milliseconds
 
 [rf]
-freq_offset = 0       # Frequency offset (Hz)
-tx_gain = 31          # Transmit gain (dB)
-rx_gain = 31          # Receive gain (dB)
-#dl_arfcn = 368500     # Downlink ARFCN
-dl_arfcn = 373000     # Downlink ARFCN
-#ssb_arfcn = 366970    # SSB ARFCN
-ssb_arfcn = 371530    # SSB ARFCN
+freq_offset = 0 # Frequency offset (Hz)
+tx_gain = 31 # Transmit gain (dB)
+rx_gain = 24 # Receive gain (dB)
+dl_arfcn = 373000 # Downlink ARFCN
+ssb_arfcn = 371530 # SSB ARFCN
 sample_rate = 23.04e6 # Sample rate (Hz)
-num_channels = 2      # Number of channels
-uplink_cfo = -0.00054 # Uplink CFO (Hz) correction
+num_channels = 2 # Number of channels
+uplink_cfo = 0
+front_padding = 1644 # Zero pad the front of the injected IQ samples for X310 SDR
+end_padding = 1656 # Zero pad the end of the injected IQ samples for X310 SDR
 
 [worker]
-n_ue_dl_worker = 4    # Number of UE downlink workers
-n_ue_ul_worker = 4    # Number of UE uplink workers
-n_gnb_dl_worker = 4   # Number of gNB downlink workers
-n_gnb_ul_worker = 4   # Number of gNB uplink workers
-close_timeout = 5000  # Close timeout, after how long haven't received a message should stop tracking the UE (ms)
+n_ue_dl_worker = 4 # Number of UE downlink workers
+n_ue_ul_worker = 4 # Number of UE uplink workers
+n_gnb_dl_worker = 4 # Number of gNB downlink workers
+n_gnb_ul_worker = 4 # Number of gNB uplink workers
+close_timeout = 5000 # Close timeout, after how long haven't received a message should stop tracking the UE (ms)
 parse_messages = true # Parse messages
-pool_size = 20        # Worker pool size
-num_ues = 12          # Number of UETrackers to pre-initialize
+pool_size = 24 # Worker pool size
+num_ues = 5 # Number of UETrackers to pre-initialize
 enable_gpu = false
 
 [injector]
-delay_n_slots = 3     # Number of slots to delay injecting the message
-duplications = 50      # Number of duplications to send in each inject
+delay_n_slots = 3 # Number of slots to delay injecting the message
+duplications = 4 # Number of duplications to send in each inject
 tx_cfo_correction = 0 # Uplink CFO correction (Hz)
-tx_advancement = 172  # Number of samples to send in advance
-pdsch_mcs = 2         # PDSCH MCS
-pdsch_prbs = 12       # PDSCH PRBs 
+tx_advancement = 58 # Number of samples to send in advance
+pdsch_mcs = 0 # PDSCH MCS
+pdsch_prbs = 12 # PDSCH PRBs
 
 [source]
-source_type = uhd                               # Source type: file, limesdr, uhd
+source_type = uhd # Source type: file, limesdr, uhd
 source_module = build/shadower/libuhd_source.so # Source module path
-source_params = type=b200,serial=3218CC4        # Device arguments for SDR source
+source_params = type=x300,master_clock_rate=184.32e6,clock=gpsdo,sync=gpsdo,sampling_rate=23.04e6 # Device arguments for SDR source
 
 # [source]
 # source_type = file                               # Source type: file, limesdr, uhd
 # source_module = build/shadower/libfile_source.so # Source module path
-# source_params = /root/records/band3/samsung_ch_0.fc32,/root/records/band3/samsung_ch_1.fc32     # Device arguments for SDR source
-
-# [source]
-# source_type = uhd                                   # Source type: file, limesdr, uhd
-# source_module = build/shadower/liblimesdr_source.so # Source module path
-# source_params = logLevel:3,dev0:XTRX,chipIndex:0,channels:1,linkFormat:I12,rx_path:LNAH,tx_path:Band1,calibration:none,freq_corr:34000,tx_enabled:0
+# source_params = /root/records/test/output.fc32,/root/records/test/output.fc32
 
 [recorder]
 enable_recorder = false
