Update configuration file to new structure

--- a/shadower/utils/CMakeLists.txt
+++ b/shadower/utils/CMakeLists.txt
@@ -1,4 +1,7 @@
+find_package(yaml-cpp REQUIRED)
+
 add_library(utils
+    src/arg_parser.cc
     src/utils.cc
     src/ssb_utils.cc
     src/phy_cfg_utils.cc
@@ -8,7 +11,7 @@ add_library(utils
     src/dci_utils.cc
     msg_helper.cc
 )
-target_link_libraries(utils ${SRSUE_SOURCES} ${SRSRAN_SOURCES})
+target_link_libraries(utils ${SRSUE_SOURCES} ${SRSRAN_SOURCES} yaml-cpp)
 
 add_library(thread_pool thread_pool.cc)
 target_link_libraries(thread_pool Threads::Threads utils)
