Update the test source to match the configurations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/build/shadower/shadower",
             "args": [
-                "configs/config-srsran-n78-20MHz.conf"
+                "configs/srsran-n78-20MHz-b210.yaml"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -42,24 +42,24 @@
             "args": [
                 "-f",
                 "3427.5",
-                "-u",
+                "-F",
                 "3427.5",
-                "-s",
-                "23.04",
                 "-g",
                 "40",
-                "-n",
-                "4000",
-                "-c",
-                "2",
-                "-o",
-                "output",
-                "-F",
-                "/root/records/",
+                "-G",
+                "40",
+                "-s",
+                "23.04",
                 "-t",
                 "uhd",
                 "-d",
-                "type=b200,master_clock_rate=23.04e6"
+                "type=b200,master_clock_rate=23.04e6",
+                "-n",
+                "4000",
+                "-o",
+                "output",
+                "-O",
+                "/root/records/test",
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -209,6 +209,10 @@
                 "23.04",
                 "-f",
                 "3427.5",
+                "-F",
+                "3427.5",
+                "-g",
+                "40",
                 "-b",
                 "3421.92",
                 "-B",
@@ -219,9 +223,49 @@
                 "type=b200,master_clock_rate=23.04e6",
                 "-c",
                 "2",
-                "-C",
+                "-S",
                 "30",
                 "-p",
+                "20"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "preLaunchTask": "build_all"
+        },
+        {
+            "name": "sdr_timing_test",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/test/sdr_timing_test",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "3427.5",
+                "-F",
+                "3427.5",
+                "-H",
+                "3427.5",
+                "-g",
+                "50",
+                "-G",
+                "80",
+                "-t",
+                "3421.92",
+                "-T",
+                "3424.8",
+                "-B",
+                "78",
+                "-d",
+                "type=b200,master_clock_rate=23.04e6",
+                "-c",
+                "1",
+                "-S",
+                "30",
+                "-P",
                 "20"
             ],
             "stopAtEntry": false,
